--- a/haskell/ghci.conf
+++ b/haskell/ghci.conf
@@ -3,4 +3,4 @@ let escape arg = "'" ++ ((\c -> if c == '\'' then "'\"'\"'" else [c]) =<< arg) +
 :def hoogle return . (":!hoogle --count 15 --color " ++) . escape
 :def doc    return . (":!hoogle --count 15 --color --info " ++) . escape
 
-:set prompt "(%s) λ "
+:set prompt "\ESC[0;34m(%s) \n\ESC[0;32mλ\ESC[0m "
