Updated Haskell settings
        * No local hoogle, unfortunately
        * Added ghci pointfree
        * Updated global package lists

--- a/haskell/ghci.conf
+++ b/haskell/ghci.conf
@@ -1,6 +1,5 @@
 let escape arg = "'" ++ ((\c -> if c == '\'' then "'\"'\"'" else [c]) =<< arg) ++"'"
 
-:def hoogle return . (":!hoogle --count 15 --color " ++) . escape
-:def doc    return . (":!hoogle --count 15 --color --info " ++) . escape
+:def pf return . (":! pointfree \"" ++) . (++ "\"")
 
 :set prompt "\ESC[0;34m(%s) \n\ESC[0;32mλ\ESC[0m "
