tmux conf tweaks
        * vim keybinds and zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set-option -g default-shell /bin/zsh
+
 unbind-key C-b
 set -g prefix `
 
@@ -14,4 +16,6 @@ set-option -g window-status-current-bg blue
 set-option -g window-status-fg white
 
 setw -g mode-keys vi
+bind-key -t vi-copy 'y' copy-selection
+
 set -g base-index 1
