Initial Treasure Data setup

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,11 +7,9 @@ bind-key a send-prefix
 bind-key k swap-window -t -1
 bind-key j swap-window -t +1
 
-set-option -g status-bg black
-set-option -g status-fg white
-set-option -g window-status-bg black
-set-option -g window-status-current-bg blue
-set-option -g window-status-fg white
+set-option -g status-style bg=black,fg=white
+set-option -g window-status-style bg=black,fg=white
+set-option -g window-status-current-style bg=blue
 
 setw -g mode-keys vi
 set -g base-index 1
