OPEN config updates

--- a/git/config
+++ b/git/config
@@ -4,3 +4,6 @@
 	st = status
 	hist = log --pretty=format:'%C(yellow)[%ad]%C(reset) %C(green)[%h]%C(reset) | %C(red)%s %C(bold red){{%an}}%C(reset) %C(blue)%d%C(reset)' --graph --date=short
 	please = push --force-with-lease
+
+[pull]
+	rebase = true
