--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,12 +4,17 @@ set -g prefix `
 bind-key ` last-window
 bind-key a send-prefix
 
-bind-key k swap-window -t -1
-bind-key j swap-window -t +1
+bind-key k swap-window -d -t -1
+bind-key j swap-window -d -t +1
 
 set-option -g status-style bg=black,fg=white
 set-option -g window-status-style bg=black,fg=white
 set-option -g window-status-current-style bg=blue
+
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 setw -g mode-keys vi
 set -g base-index 1
