--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,12 +9,10 @@ bind-key j swap-window -d -t +1
 
 set-option -g status-style bg=black,fg=white
 set-option -g window-status-style bg=black,fg=white
-set-option -g window-status-current-style bg=blue
+set-option -g window-status-current-style bg="#98971a" # gruvbox green
 
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 setw -g mode-keys vi
 set -g base-index 1
